# gamingengine

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  configure.sh
src/: main.cpp
src/engine/: logging.cpp  logging.hpp  os.cpp  os.hpp
src/engine/render/: render_device.cpp  render_device.hpp
src/engine/scene/: scene.cpp  scene.hpp
